--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,22 +7,22 @@
 
     <fragment
             android:id="@+id/FirstFragment"
-            android:name="com.cohiiPad.storage.FirstFragment"
-            android:label="@string/first_fragment_label"
-            tools:layout="@layout/fragment_first">
+            android:name="com.cohiiPad.storage.MainActivity"
+            android:label="@string/app_name"
+            tools:layout="@layout/activity_main">
 
         <action
-                android:id="@+id/action_FirstFragment_to_SecondFragment"
-                app:destination="@id/SecondFragment"/>
+                android:id="@+id/action_FirstFragment_to_InfraredActivity"
+                app:destination="@+id/InfraredActivity"/>
     </fragment>
     <fragment
-            android:id="@+id/SecondFragment"
-            android:name="com.cohiiPad.storage.SecondFragment"
-            android:label="@string/second_fragment_label"
-            tools:layout="@layout/fragment_second">
+            android:id="@+id/InfraredActivity"
+            android:name="com.cohiiPad.storage.InfraredActivity"
+            android:label="@string/app_name"
+            tools:layout="@layout/activity_infrared">
 
         <action
-                android:id="@+id/action_SecondFragment_to_FirstFragment"
+                android:id="@+id/action_InfraredActivity_to_FirstFragment"
                 app:destination="@id/FirstFragment"/>
     </fragment>
 </navigation>
