add a new intent and title bar

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,10 @@
           android:title="@string/app_name"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+    <item
+            android:id="@+id/add_item"
+            android:title="Add"/>
+    <item
+            android:id="@+id/remove_item"
+            android:title="Remove"/>
 </menu>
