--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,10 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
-            app:startDestination="@id/FirstFragment">
+            app:startDestination="@id/activity_main">
 
-    <fragment
-            android:id="@+id/FirstFragment"
+    <activity
+            android:id="@+id/activity_main"
             android:name="com.cohiiPad.storage.MainActivity"
             android:label="@string/app_name"
             tools:layout="@layout/activity_main">
@@ -14,8 +14,8 @@
         <action
                 android:id="@+id/action_FirstFragment_to_InfraredActivity"
                 app:destination="@+id/InfraredActivity"/>
-    </fragment>
-    <fragment
+    </activity>
+    <activity
             android:id="@+id/InfraredActivity"
             android:name="com.cohiiPad.storage.InfraredActivity"
             android:label="@string/app_name"
@@ -23,6 +23,6 @@
 
         <action
                 android:id="@+id/action_InfraredActivity_to_FirstFragment"
-                app:destination="@id/FirstFragment"/>
-    </fragment>
+                app:destination="@id/activity_main"/>
+    </activity>
 </navigation>
