--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.cohiiPad.storage.MainActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/app_name"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
     <item
             android:id="@+id/add_item"
-            android:title="Add"/>
+            android:title="@string/menu_1"/>
     <item
             android:id="@+id/remove_item"
-            android:title="Remove"/>
+            android:title="@string/menu_2"/>
 </menu>
