--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+<!--    <style name="Base.Theme.Storage" parent="Theme.Material3.DayNight">-->
     <style name="Base.Theme.Storage" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-        <item name="windowActionBar">true</item>
-        <item name="windowNoTitle">false</item>
-<!--        用于开启或者关闭标题栏-->
     </style>
 </resources>
